--- a/charts/kubemox/values.yaml
+++ b/charts/kubemox/values.yaml
@@ -132,3 +132,17 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+# Any additional manifests:
+extraObjects: []
+  # - apiVersion: "external-secrets.io/v1beta1"
+  #   kind: ExternalSecret
+  #   metadata:
+  #     name: kubemox-secrets
+  #   spec:
+  #     secretStoreRef: secret-store
+  #     target:
+  #       name: kubemox-secrets
+  #     dataFrom:
+  #       - extract:
+  #           key: /prod/kubemox
