--- a/config/crd/bases/proxmox.alperen.cloud_virtualmachines.yaml
+++ b/config/crd/bases/proxmox.alperen.cloud_virtualmachines.yaml
@@ -114,7 +114,6 @@ spec:
               x-kubernetes-map-type: atomic
             type: array
           spec:
-            description: VirtualMachineSpec defines the desired state of VirtualMachine
             properties:
               additionalConfig:
                 additionalProperties:
@@ -134,6 +133,9 @@ spec:
                     type: string
                 type: object
                 x-kubernetes-map-type: atomic
+                x-kubernetes-validations:
+                - message: ConnectionRef is immutable
+                  rule: self == oldSelf
               deletionProtection:
                 default: false
                 description: |-
@@ -405,6 +407,9 @@ spec:
             - name
             - nodeName
             type: object
+            x-kubernetes-validations:
+            - message: ConnectionRef is required once set
+              rule: '!has(oldSelf.connectionRef) || has(self.connectionRef)'
           status:
             description: VirtualMachineStatus defines the observed state of VirtualMachine
             properties:
