--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,7 @@ nav:
 - Overview: index.md
 - getting_started.md
 - Custom Resources:
+  - Overview: crds/index.md
   - Virtual Machines (QEMU): 
     - VirtualMachine: crds/virtualmachine.md
     - ManagedVirtualMachine: crds/managedvirtualmachine.md
